fix footer colors on dark mode

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -2095,6 +2095,9 @@ body.dark-mode .cs-button-5:before {
         background-color: #f5602e;
         position: relative;
     }
+    .dark-mode #cs-footer-1340 {
+      background-color: var(--dark);
+    }
     #cs-footer-1340 .cs-container {
         width: 100%;
         max-width: 80rem;
@@ -2289,7 +2292,7 @@ body.dark-mode .cs-button-5:before {
     }
 }
 /* Dark Mode */
-@media only screen and (min-width: 48rem) {
+@media only screen and (min-width: 0rem) {
     body.dark-mode #cs-footer-1340 {
         background-color: transparent;
     }
